@@ -40,6 +40,7 @@ JIRA Issues Addressed
 * DISCOVERY-9 (https://issues.apache.org/jira/browse/DISCOVERY-9)
 * DISCOVERY-11 (https://issues.apache.org/jira/browse/DISCOVERY-11)
 * DISCOVERY-12 (https://issues.apache.org/jira/browse/DISCOVERY-12)
+* DISCOVERY-13 (https://issues.apache.org/jira/broese/DISCOVERY-13)
 * DISCOVERY-14 (https://issues.apache.org/jira/browse/DISCOVERY-14)
 * DISCOVERY-15 (https://issues.apache.org/jira/browse/DISCOVERY-15)
 * DISCOVERY-16 (https://issues.apache.org/jira/browse/DISCOVERY-16)
